# Smart-Home-Automation-System

./: CMakeLists.txt  README.md  main.cpp
include/: Client.h
include/adapter/: ExternalDevice.h  ExternalDeviceAdapter.h
include/command/: AutomationEngine.h  ICommand.h  SetTemperatureCommand.h  TurnOffCommand.h  TurnOnCommand.h
include/core/: DeviceGroup.h  FloorGroup.h  FunctionalGroup.h  RoomGroup.h  SmartComponent.h  SmartDevice.h  SmartHomeHub.h
include/devices/: BrandAHalogenLight.h  BrandALedLight.h  BrandASmartThermoA.h  BrandASmartThermoB.h  BrandAWiredSCam.h  BrandAWirelessSCam.h  BrandBHalogenLight.h  BrandBLedLight.h  BrandBSmartThermoA.h  BrandBSmartThermoB.h  BrandBWiredSCam.h  BrandBWirelessSCam.h  Camera.h  DoorLock.h  Light.h  MotionSensor.h  PremiumHalogenLight.h  PremiumLedLight.h  Thermostat.h
include/factory/: BasicDeviceFactory.h  BrandAFactory.h  BrandBFactory.h  PremiumDeviceFactory.h  SmartDeviceFactory.h
include/observer/: IObserver.h  ISubject.h  Observer.h  Subject.h
include/state/: DimmedState.h  IDeviceState.h  OffState.h  OnState.h
include/strategy/: ComfortMode.h  EnergyEfficiencyMode.h  IMode.h
include/utils/: Logger.h  Timer.h
src/: Client.cpp
src/adapter/: ExternalDevice.cpp  ExternalDeviceAdapter.cpp  LegacyDevice.cpp  LegacyDeviceAdapter.cpp
src/command/: AutomationEngine.cpp  CommandInvoker.cpp  ICommand.cpp  SetTemperatureCommand.cpp  TurnOffCommand.cpp  TurnOnCommand.cpp
src/core/: DeviceGroup.cpp  FloorGroup.cpp  FunctionalGroup.cpp  RoomGroup.cpp  SmartComponent.cpp  SmartDevice.cpp  SmartHomeHub.cpp
src/devices/: BrandAHalogenLight.cpp  BrandALedLight.cpp  BrandASmartThermoA.cpp  BrandASmartThermoB.cpp  BrandAWiredSCam.cpp  BrandAWirelessSCam.cpp  BrandBHalogenLight.cpp  BrandBLedLight.cpp  BrandBSmartThermoA.cpp  BrandBSmartThermoB.cpp  BrandBWiredSCam.cpp  BrandBWirelessSCam.cpp  Camera.cpp  DoorLock.cpp  Light.cpp  MotionSensor.cpp  PremiumHalogenLight.cpp  PremiumLedLight.cpp  Thermostat.cpp
src/factory/: BasicDeviceFactory.cpp  BrandAFactory.cpp  BrandBFactory.cpp  PremiumDeviceFactory.cpp  SmartDeviceFactory.cpp
src/observer/: AlertSystem.cpp  EventManager.cpp
src/state/: ActiveState.cpp  DimmedState.cpp  InactiveState.cpp  OffState.cpp  OnState.cpp  StandbyState.cpp
src/strategy/: ComfortStrategy.cpp  EnergyEfficiencyStrategy.cpp  SecurityStrategy.cpp
src/utils/: Logger.cpp  Timer.cpp
tests/: test_command.cpp  test_composite.cpp  test_observer.cpp
